--- a/src/homepage/templates/homepage.html
+++ b/src/homepage/templates/homepage.html
@@ -4,11 +4,12 @@
 
 {% block content %}
 <!--Hero-->
-<section style="background-color: #F7F7F7;">
+<section style="background-color: #ffef39;">
   <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 grid lg:grid-cols-2 gap-8 lg:gap-16">
       <div class="flex flex-col justify-center">
-          <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl ">Create big picture workshops</h1>
-          <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl ">Keep the discussion going after the workshop is done</p>
+        <h1 class="mb-4 text-4xl tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl ">See the</h1>
+        <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl ">big picture</h1>
+        <p class="mb-8 text-lg font-normal text-gray-900 lg:text-xl ">Mapmaker aligns your team while working on a complex problem.</p>
           {% include 'sign_up_marketing.html' %}
 
       </div>
@@ -18,7 +19,7 @@
   </div>
 </section>
 <!--The wave-->
-<div class="relative -mt-12 lg:-mt-24">
+<div class="relative -mt-12 lg:-mt-24" style="background-color: #ffef39;">
   <svg viewBox="0 0 1428 174" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
       <g transform="translate(-2.000000, 44.000000)" fill="#FFFFFF" fill-rule="nonzero">
@@ -43,15 +44,11 @@
 <section class="bg-white ">
     <div class="gap-16 items-center py-8 px-4 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 lg:py-16 lg:px-6">
         <div class="font-light text-gray-500 sm:text-lg ">
-            <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 ">We didn't reinvent the wheel</h2>
-            <p class="mb-4">We just made it better. Workshops are good. Taking notes is good. Online tools are good. We simply combined them into 1 product that brings up the best on each of them.</p>
-            <p>We bring you the best workshops with our Mapmaker certified trainers, bring you the tools to get results out of your workshop. And we built the online tool that allows you to keep on making a difference even after the workshop is done.</p>
+            <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 ">The workshop kit</h2>
+            <p class="mb-4">Mapmaker is a toolkit which is used in collobarative workshops. You can combine elements and connect them. Emerging from this is a landscape of knowledge, ideas and insights.</p>
             <br>
-            <a href="/contact" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
-              Get in touch
-            </a>
             <a href="/blog" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
-              Learn more
+              The Kit
             </a>
         </div>
         <div class="grid grid-cols-2 gap-4 mt-8">
@@ -72,7 +69,6 @@
           <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 ">Bring your workshop to life with our rewritable cards.</h2>
 
           <p class="mb-6 font-light text-gray-500 md:text-lg ">Create your own mappings on any topic you lie, using the beautiful Mapmaker custom cards. Break complex problems down into small bite-size chunks without using endless post its. And after the session; you continue working in the Mapmaker custom dashboard. </p>
-           
           <a href="/product/cards" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
             Learn more about our custom cardset
           </a>
@@ -83,22 +79,22 @@
   </div>
 </section>
 
-  <section class="bg-white ">
-    <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
-        <div class="mr-auto place-self-center lg:col-span-7">
-            <h1 class="max-w-2xl mb-4 text-4xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl ">A collaboration platform unlike any other</h1>
-            <p class="max-w-2xl mb-6 font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl ">Work together after your workshop. Share resources, discuss topics and drag cards around to make the mapping you desire. If you need someone from your team to take a look, simply share a magic link and they can view your worskhop instantly</p>
-            <a href="/product/platform" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
-              Learn more about our online platform
-            </a>
-            <a href="/contact" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
-              Request a demo
-            </a>
-        </div>
-        <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
-            <img class="rounded-lg" src="{% static '/images/heroimage.png' %}" alt="mockup">
-        </div>                
-    </div>
+<section class="bg-white ">
+  <div class="gap-16 items-center py-8 px-4 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 lg:py-16 lg:px-6">
+      <div class="font-light text-gray-500 sm:text-lg ">
+          <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 ">Continue online</h2>
+          <p class="mb-4">When the workshop is done, you often want to continue working. The days of fuzzy pictures of post-its are over. Archive all your data on mapmaker.nl and keep the conversation going.</p>
+          <br>
+          <a href="/contact" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
+            Sign up
+          </a>
+      </div>
+      <div class="grid grid-cols-2 gap-4 mt-8">
+          <img class="w-full rounded-lg" src="{% static '/images/heroimage.png' %}" alt="office content 1">
+          <img class="mt-4 w-full lg:mt-10 rounded-lg" src="{% static '/images/joephero.png' %}" alt="office content 2">
+
+      </div>
+  </div>
 </section>
 
 
@@ -119,6 +115,7 @@
   </section>
   
 <!-- Change the colour #f8fafc to match the previous section colour -->
+<div style="background-color: #ffef39;">
 <svg class="wave-top" viewBox="0 0 1439 147" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
     <g transform="translate(-1.000000, -14.000000)" fill-rule="nonzero">
@@ -140,21 +137,21 @@
     </g>
   </g>
 </svg>
+</div>
 
-
-  <section class="container mx-auto text-center py-6 mb-12">
-    <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-grey-800">
-      Get early access
-    </h2>
-    <h3 class="my-4 text-3xl leading-tight">
-      Get invited to early access of mapmaker.nl
-    </h3>
-    <a href="/contact" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
-      Get in touch
-    </a>
-    
-
-  </section>
+<div style="background-color: #ffef39;">
+<section class="container mx-auto text-center p-6 " >
+  <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-grey-800">
+    Get early access
+  </h2>
+  <h3 class="my-4 text-3xl leading-tight">
+    Get invited to early access of mapmaker.nl
+  </h3>
+  <a href="/contact" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
+    Get in touch
+  </a>
+</section>
+</div>
 
 
 {% endblock%}
