--- a/src/homepage/templates/homepage.html
+++ b/src/homepage/templates/homepage.html
@@ -9,11 +9,12 @@
       <div class="flex flex-col justify-center">
         <h1 class="mb-4 text-4xl tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl ">See the</h1>
         <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl ">big picture</h1>
+
         <p class="mb-8 text-lg font-normal text-gray-900 lg:text-xl ">Mapmaker aligns your team while working on a complex problem.</p>
           {% include 'sign_up_marketing.html' %}
 
       </div>
-      <div>
+      <div class="flex flex-col justify-center">
         <img src="{% static '/images/heroimage.png' %}" />
       </div>
   </div>
@@ -47,7 +48,7 @@
             <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 ">The workshop kit</h2>
             <p class="mb-4">Mapmaker is a toolkit which is used in collobarative workshops. You can combine elements and connect them. Emerging from this is a landscape of knowledge, ideas and insights.</p>
             <br>
-            <a href="/blog" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
+            <a href="/blog" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700" style="background-color: #78E7BF; color: black; box-shadow: 3px 3px;">
               The Kit
             </a>
         </div>
