some more styling

--- a/src/users/templates/password_reset_email.html
+++ b/src/users/templates/password_reset_email.html
@@ -4,7 +4,8 @@
 {% block content %}
 
 
-<div class="flex min-h-full items-center justify-center py-40 px-4 sm:px-6 lg:px-8 bg">
+<div class="flex h-screen items-center justify-center px-4 sm:px-6 lg:px-8 bg">
+
     <div class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow">
       <div>
         <h1 class="mt-6 text-center text-3xl font-bold tracking-tight text-gray-800">Password reset email sent</h1>
