--- a/src/users/templates/password_reset_form.html
+++ b/src/users/templates/password_reset_form.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="flex min-h-full items-center justify-center py-40 px-4 sm:px-6 lg:px-8 bg">
+<div class="flex h-screen items-center justify-center px-4 sm:px-6 lg:px-8 bg">
     <div class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow">
       <div>
         <h1 class="mt-6 text-center text-3xl font-bold tracking-tight text-gray-800">Reset your password</h1>
@@ -18,7 +18,7 @@
 
   
         <div>
-          <button type="submit" class="group relative flex w-full justify-center rounded-md border border-transparent bg-gray-700 py-2 px-4 text-sm font-medium text-white hover:bg-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2">
+          <button type="submit" class="group relative flex w-full justify-center rounded-md border border-transparent bg-gray-700 py-2 px-4 text-sm font-medium text-white hover:bg-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2" style="background-color: #78E7BF; color: black; box-shadow: 3px 3px;">
             <span class="absolute inset-y-0 left-0 flex items-center pl-3">
               <svg class="h-5 w-5 text-gray-500 group-hover:text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                 <path fill-rule="evenodd" d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z" clip-rule="evenodd" />
