--- a/src/users/templates/register.html
+++ b/src/users/templates/register.html
@@ -3,7 +3,8 @@
 
 {% block content %}
 
-<div class="flex min-h-full items-center justify-center py-40 px-4 sm:px-6 lg:px-8 bg">
+
+<div class="flex h-screen items-center justify-center px-4 sm:px-6 lg:px-8 bg">
     <div class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow">
       <div>
         <h1 class="mt-6 text-center text-3xl font-bold tracking-tight text-gray-800">Create a account to edit {{workshop}}</h1>
@@ -21,11 +22,11 @@
           <div class="text-sm">
             <div class="flex items-center">
               <input disabled checked id="disabled-checked-checkbox" type="checkbox" value="" class="w-4 h-4 text-gray-600 bg-gray-100 border-gray-300 rounded focus:ring-gray-500 ">
-              <label for="checked-checkbox" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-300">I accept <a href="/legal/terms" class="hover:underline">terms and condition</a> and <a href="/legal/privacy" class="hover:underline">privacy policy</a></label>
+              <label for="checked-checkbox" class="ml-2 text-sm font-medium text-gray-900">I accept <a href="/legal/terms" class="hover:underline">terms and condition</a> and <a href="/legal/privacy" class="hover:underline">privacy policy</a></label>
           </div>
           </div>
         </div><br>
-          <button type="submit" class="group relative flex w-full justify-center rounded-md py-2.5 px-5 mr-2 mb-2 text-sm font-medium text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
+          <button type="submit" class="group relative flex w-full justify-center rounded-md py-2.5 px-5 mr-2 mb-2 text-sm font-medium text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700" style="background-color: #78E7BF; color: black; box-shadow: 3px 3px;">
             <span class="absolute inset-y-0 left-0 flex items-center pl-3">
               <svg class="h-5 w-5 text-gray-500 group-hover:text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                 <path fill-rule="evenodd" d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z" clip-rule="evenodd" />
