--- a/src/homepage/templates/homepage.html
+++ b/src/homepage/templates/homepage.html
@@ -4,21 +4,23 @@
 
 {% block content %}
 <!--Hero-->
-<section style="background-color: #F7F7F7;">
+<section style="background-color: #ffef39;">
   <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 grid lg:grid-cols-2 gap-8 lg:gap-16">
       <div class="flex flex-col justify-center">
-          <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl ">Create big picture workshops</h1>
-          <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl ">Keep the discussion going after the workshop is done</p>
+        <h1 class="mb-4 text-4xl tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl ">See the</h1>
+        <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl ">big picture</h1>
+
+        <p class="mb-8 text-lg font-normal text-gray-900 lg:text-xl ">Mapmaker aligns your team while working on a complex problem.</p>
           {% include 'sign_up_marketing.html' %}
 
       </div>
-      <div>
+      <div class="flex flex-col justify-center">
         <img src="{% static '/images/heroimage.png' %}" />
       </div>
   </div>
 </section>
 <!--The wave-->
-<div class="relative -mt-12 lg:-mt-24">
+<div class="relative -mt-12 lg:-mt-24" style="background-color: #ffef39;">
   <svg viewBox="0 0 1428 174" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
       <g transform="translate(-2.000000, 44.000000)" fill="#FFFFFF" fill-rule="nonzero">
@@ -43,15 +45,11 @@
 <section class="bg-white ">
     <div class="gap-16 items-center py-8 px-4 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 lg:py-16 lg:px-6">
         <div class="font-light text-gray-500 sm:text-lg ">
-            <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 ">We didn't reinvent the wheel</h2>
-            <p class="mb-4">We just made it better. Workshops are good. Taking notes is good. Online tools are good. We simply combined them into 1 product that brings up the best on each of them.</p>
-            <p>We bring you the best workshops with our Mapmaker certified trainers, bring you the tools to get results out of your workshop. And we built the online tool that allows you to keep on making a difference even after the workshop is done.</p>
+            <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 ">The workshop kit</h2>
+            <p class="mb-4">Mapmaker is a toolkit which is used in collobarative workshops. You can combine elements and connect them. Emerging from this is a landscape of knowledge, ideas and insights.</p>
             <br>
-            <a href="/contact" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
-              Get in touch
-            </a>
-            <a href="/blog" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
-              Learn more
+            <a href="/blog" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700" style="background-color: #78E7BF; color: black; box-shadow: 3px 3px;">
+              The Kit
             </a>
         </div>
         <div class="grid grid-cols-2 gap-4 mt-8">
@@ -72,7 +70,6 @@
           <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 ">Bring your workshop to life with our rewritable cards.</h2>
 
           <p class="mb-6 font-light text-gray-500 md:text-lg ">Create your own mappings on any topic you lie, using the beautiful Mapmaker custom cards. Break complex problems down into small bite-size chunks without using endless post its. And after the session; you continue working in the Mapmaker custom dashboard. </p>
-           
           <a href="/product/cards" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
             Learn more about our custom cardset
           </a>
@@ -83,22 +80,22 @@
   </div>
 </section>
 
-  <section class="bg-white ">
-    <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
-        <div class="mr-auto place-self-center lg:col-span-7">
-            <h1 class="max-w-2xl mb-4 text-4xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl ">A collaboration platform unlike any other</h1>
-            <p class="max-w-2xl mb-6 font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl ">Work together after your workshop. Share resources, discuss topics and drag cards around to make the mapping you desire. If you need someone from your team to take a look, simply share a magic link and they can view your worskhop instantly</p>
-            <a href="/product/platform" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
-              Learn more about our online platform
-            </a>
-            <a href="/contact" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
-              Request a demo
-            </a>
-        </div>
-        <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
-            <img class="rounded-lg" src="{% static '/images/heroimage.png' %}" alt="mockup">
-        </div>                
-    </div>
+<section class="bg-white ">
+  <div class="gap-16 items-center py-8 px-4 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 lg:py-16 lg:px-6">
+      <div class="font-light text-gray-500 sm:text-lg ">
+          <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 ">Continue online</h2>
+          <p class="mb-4">When the workshop is done, you often want to continue working. The days of fuzzy pictures of post-its are over. Archive all your data on mapmaker.nl and keep the conversation going.</p>
+          <br>
+          <a href="/contact" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
+            Sign up
+          </a>
+      </div>
+      <div class="grid grid-cols-2 gap-4 mt-8">
+          <img class="w-full rounded-lg" src="{% static '/images/heroimage.png' %}" alt="office content 1">
+          <img class="mt-4 w-full lg:mt-10 rounded-lg" src="{% static '/images/joephero.png' %}" alt="office content 2">
+
+      </div>
+  </div>
 </section>
 
 
@@ -118,43 +115,19 @@
     </div>
   </section>
   
-<!-- Change the colour #f8fafc to match the previous section colour -->
-<svg class="wave-top" viewBox="0 0 1439 147" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-  <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-    <g transform="translate(-1.000000, -14.000000)" fill-rule="nonzero">
-      <g class="wave" fill="#f8fafc">
-        <path
-          d="M1440,84 C1383.555,64.3 1342.555,51.3 1317,45 C1259.5,30.824 1206.707,25.526 1169,22 C1129.711,18.326 1044.426,18.475 980,22 C954.25,23.409 922.25,26.742 884,32 C845.122,37.787 818.455,42.121 804,45 C776.833,50.41 728.136,61.77 713,65 C660.023,76.309 621.544,87.729 584,94 C517.525,105.104 484.525,106.438 429,108 C379.49,106.484 342.823,104.484 319,102 C278.571,97.783 231.737,88.736 205,84 C154.629,75.076 86.296,57.743 0,32 L0,0 L1440,0 L1440,84 Z"
-        ></path>
-      </g>
-      <g transform="translate(1.000000, 15.000000)" fill="#FFFFFF">
-        <g transform="translate(719.500000, 68.500000) rotate(-180.000000) translate(-719.500000, -68.500000) ">
-          <path d="M0,0 C90.7283404,0.927527913 147.912752,27.187927 291.910178,59.9119003 C387.908462,81.7278826 543.605069,89.334785 759,82.7326078 C469.336065,156.254352 216.336065,153.6679 0,74.9732496" opacity="0.100000001"></path>
-          <path
-            d="M100,104.708498 C277.413333,72.2345949 426.147877,52.5246657 546.203633,45.5787101 C666.259389,38.6327546 810.524845,41.7979068 979,55.0741668 C931.069965,56.122511 810.303266,74.8455141 616.699903,111.243176 C423.096539,147.640838 250.863238,145.462612 100,104.708498 Z"
-            opacity="0.100000001"
-          ></path>
-          <path d="M1046,51.6521276 C1130.83045,29.328812 1279.08318,17.607883 1439,40.1656806 L1439,120 C1271.17211,77.9435312 1140.17211,55.1609071 1046,51.6521276 Z" opacity="0.200000003"></path>
-        </g>
-      </g>
-    </g>
-  </g>
-</svg>
 
 
-  <section class="container mx-auto text-center py-6 mb-12">
-    <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-grey-800">
-      Get early access
-    </h2>
-    <h3 class="my-4 text-3xl leading-tight">
-      Get invited to early access of mapmaker.nl
-    </h3>
-    <a href="/contact" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
-      Get in touch
-    </a>
-    
-
-  </section>
+<section class="container mx-auto text-center p-6 " >
+  <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-grey-800">
+    Get early access
+  </h2>
+  <h3 class="my-4 text-3xl leading-tight">
+    Get invited to early access of mapmaker.nl
+  </h3>
+  <a href="/contact" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
+    Get in touch
+  </a>
+</section>
 
 
 {% endblock%}
