close edit by refreshing drawer

--- a/src/card_interactions/templates/drawer.html
+++ b/src/card_interactions/templates/drawer.html
@@ -91,7 +91,7 @@
                     </div>
                     <div class="items-center  sm:flex">
                         <div class="items-center m-4 p-4 sm:flex"> 
-                            {% include "new_description.html" %}
+                            {% include "new_description.html" with card=card %}
         
                         </div>
                     </div>  
