added uptime badge

--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -243,6 +243,9 @@
 						<li class="mb-4">
                             <a href="https://github.com/two-trick-pony-NL/mapmaker" class="hover:underline">Source Code</a>
                         </li>
+						<li class="mb-4">
+                            <a href="https://two-trick-pony-nl.github.io/upptime/history/mapmaker" class="hover:underline">Status page</a>
+                        </li>
                     </ul>
                 </div>
                 <div>
