--- a/src/dashboard/templates/dashboard_index.html
+++ b/src/dashboard/templates/dashboard_index.html
@@ -2,7 +2,7 @@
 
 {% block title %}Dashboard {{workshop}} {% endblock %}
 {% block content %}
-<main class="grid full place-items-center lg:px-8">
+<main class="grid full place-items-center mt-20 lg:px-8">
   <div style="display: inline-block; margin-left: 150px;">
     <div id="zoom">
       {% if zoomlevel == '0' %}
