--- a/src/users/templates/userprofile.html
+++ b/src/users/templates/userprofile.html
@@ -2,8 +2,7 @@
 {% block title %}Profile - {{user.first_name}} {% endblock %}
 
 {% block content %}
-<div class="flex flex-row justify-center">
-    
+<div class="flex m-8 flex-row justify-center">
     <div class=" basis-1/4 overflow-hidden bg-white shadow sm:rounded-lg mb-8 m-3 p-5">
         <div class="bg-white py-24 sm:py-32">
         <div class="mx-auto max-w-7xl px-6 lg:px-8">
