--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -80,20 +80,21 @@
 	
 
 <!--Nav-->	
-<nav class="border-gray-200 px-2 sm:px-4 py-2.5 rounded " style="background-color: #fae050; z-index: 10000; position:absolute; width: 100%; top:0px; left: 0px; position: fixed;">
+<nav class="fixed w-full z-20 top-0 left-0" style="background-color: #fae050;">
+
 <div class="container flex flex-wrap items-center justify-between mx-auto">
 	{% if user.is_authenticated%}
 	<a href="/dashboard" class="flex items-center">
-		<img src="{% static '/images/mapmaker_logo.png' %}" class="h-10 mr-3 sm:h-9" alt="mapmaker Logo" />
+		<img src="{% static '/images/mapmaker_logo.png' %}" class="h-10 mr-3 sm:h-9" style="height: 75px" alt="mapmaker Logo" />
 	</a>
 	{% else %}
 	{% if workshop_secret %}
 	<a href="/dashboard/guest/{{workshop_secret}}" class="flex items-center ">
-		<img src="{% static '/images/mapmaker_logo.png' %}" class="h-10 mr-3 sm:h-9" alt="mapmaker Logo" />
+		<img src="{% static '/images/mapmaker_logo.png' %}" class="h-10 mr-3 sm:h-9" style="height: 75px" alt="mapmaker Logo" />
 	</a>
 	{% else%}
 	<a href="/" class="flex items-center">
-		<img src="{% static '/images/mapmaker_logo.png' %}" class="h-10 mr-3 sm:h-9" alt="mapmaker Logo" />
+		<img src="{% static '/images/mapmaker_logo.png' %}" class="h-10 mr-3 sm:h-9" style="height: 75px" alt="mapmaker Logo" />
 	</a>
 	{% endif %}
 	
@@ -175,11 +176,11 @@
 	</div>
 </div>
 </nav>
+<div style="height: 70px;"></div>
 
-<div style="height: 100px; background-color: #fae050;"></div>
 
-	
-	{% block content%}{% endblock %}
+	{% block content%}
+	{% endblock %}
 
 	{% if not user.is_authenticated %}
 	{% if not workshop_secret %}
