--- a/src/workshop/templates/workshop_settings.html
+++ b/src/workshop/templates/workshop_settings.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="p-8 w-12/12 mx-8 bg-white border border-gray-200 rounded-lg shadow  ">
+<div class="p-8 w-12/12 m-8 bg-white border border-gray-200 rounded-lg shadow  ">
 <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Workshop settings: {{workshop}}</h1>
 <p class="mt-6 text-lg leading-8 text-gray-600">View and edit your workshop, view participants and invite new participants to join! </p>
 <button type="button" onclick="location.href = '/dashboard/download';" hx-indicator="#spinner" hx-confirm="Do you want to download a image of your session?"   class="py-2.5 px-5 m-4 mr-2 mb-2 text-xs font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-gray-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700    dark:hover:text-white dark:hover:bg-gray-700">
