--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -56,6 +56,19 @@
 			y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
 		})(window, document, "clarity", "script", "gpgohh9dep");
 	</script>
+	<style>
+		.custombutton {
+			background-color: #78E7BF; 
+			color: black; 
+			box-shadow: 3px 3px;"
+			}
+		.custombutton:hover {
+			background-color: #60b898; 
+			border-color: black;
+			border-width: 1px;
+		}
+
+	</style>
 
 </head>
 <script src="https://code.jquery.com/jquery-3.6.4.slim.min.js" integrity="sha256-a2yjHM4jnF9f54xUQakjZGaqYs/V1CYvWpoqZzC2/Bw=" crossorigin="anonymous"></script>
