--- a/src/homepage/templates/sign_up_marketing.html
+++ b/src/homepage/templates/sign_up_marketing.html
@@ -3,6 +3,6 @@
     {% csrf_token %}
     {{ form }}
     <br>
-    <input type="submit" value="Claim your invite for the beta launch" class="py-4 text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-20 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700" style="background-color: #78E7BF; color: black; box-shadow: 3px 3px;">
+    <input type="submit" value="Claim your invite for the beta launch" class="py-4 text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-20 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700 custombutton">
 </form>
 {% endblock %}
