--- a/src/workshop/templates/workshop_share.html
+++ b/src/workshop/templates/workshop_share.html
@@ -16,7 +16,7 @@
 <div>
 <input type="text" readonly value="https://mapmaker.nl/dashboard/guest/{{workshop_secret}}" id="myInput" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-gray-500 focus:border-gray-500 block w-full p-2.5     dark:focus:ring-gray-500 dark:focus:border-gray-500">
 <br>
-<button  onclick="copyurltoclipboard()" class="group relative flex w-full justify-center rounded-md border border-transparent bg-gray-700 py-2 px-4 text-sm font-medium text-white hover:bg-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2" style="background-color: #78E7BF; color: black; box-shadow: 3px 3px;">
+<button  onclick="copyurltoclipboard()" class="group relative flex w-full justify-center rounded-md border border-transparent bg-gray-700 py-2 px-4 text-sm font-medium text-white hover:bg-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2 custombutton">
 Copy link to {{workshop}} to your clipboard
 </button>
 <p id="helper-text-explanation" class="mt-2 text-sm text-gray-500 ">Beware: anyone with this link can view your workshop. The link expires after 7 days.</p>
