fixed some linting issues

--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -60,7 +60,7 @@
 		.custombutton {
 			background-color: #78E7BF; 
 			color: black; 
-			box-shadow: 3px 3px;"
+			box-shadow: 3px 3px;
 			}
 		.custombutton:hover {
 			background-color: #60b898; 
