added new header to OpenGraph socials

--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -13,7 +13,7 @@
 	<meta property="og:url" content="https://mapmaker.nl">
 	<meta property="og:description" content="Mapmaker aligns your teams while youre working on complex problems.">
 	<meta property="og:type" content="business.business">
-	<meta property="og:image" content="https://mapmaker.nl/static/images/heroimage.png">
+	<meta property="og:image" content="{% static '/images/HeaderPhoto.png' %}">
 	<meta property="og:image" content="https://mapmaker.nl/static/images/joephero.png">
 	<meta name="description" content="Mapmaker Homepage" />
 	<meta name="keywords" content="Mapmaker workshop online tool netwerk" />
