adding new dependancy to dockerfile

--- a/src/homepage/templates/homepage.html
+++ b/src/homepage/templates/homepage.html
@@ -14,7 +14,7 @@
           {% include 'sign_up_marketing.html' %}
       </div>
       <div class="flex flex-col justify-center">
-        <img class="h-full m-8 max-w-full" src="{% static '/images/HeaderPhoto.png' %}" alt="Main header photo" />
+        <img class=" m-8 max-w-full" src="{% static '/images/HeaderPhoto.png' %}" alt="Main header photo" />
       </div>
   </div>
 </section>
